trunk/Archive2/32/5a0c898951a540/output
main.cpp: In function 'int main()':
main.cpp:9:14: error: cannot bind 'std::string {aka std::basic_string<char>}' lvalue to 'std::string&& {aka std::basic_string<char>&&}'
     print(fmt);
              ^
main.cpp:5:6: note: in passing argument 1 of 'void print(std::string&&)'
 void print(std::string&& x) {}
      ^
